src/public/css/dark.css
:root
{
    --dark-foreground: #e1e1e1;
    --dark-background: #222222;
    --dark-border: rgba(250, 250, 250, 0.250);
    --dark-nav: #3b3b3b;
    --dark-nav-darker: #262626;
}
body
{
    background-color: var(--dark-background);
    color:  var(--dark-foreground);
}
.article-wrapper
{
    background-color:  var(--dark-background);
    color:  var(--dark-foreground);
    border: 1px solid var(--dark-border) !important;
}
#rcsidebar
{
    background-color: var(--dark-background);
    color:  var(--dark-foreground);
    border: 1px solid var(--dark-border) !important;
    border-bottom: none !important;
}
.navbar
{
    background-color:  var(--dark-nav) !important;
}
.ui-autocomplete
{
    background-color: var(--dark-nav) !important;
}
.ui-autocomplete > li
{
    color:  var(--dark-foreground);
}
#searchBox
{
    background-color: #9badbf;
}
#searchinput
{
    background-color: var(--dark-background);
    color: #b1b1b1;
}
#searchSubmit
{
    background-color: var(--dark-nav-darker) !important;
}
.dropdown-menu, .dropdown-menu > li, .dropdown-item
{
    background-color: var(--dark-nav-darker) !important;
    color: var(--dark-foreground) !important;
}
.dropdown-menu
{
    border: 1px solid var(--dark-border) !important;
}
.list-group-item
{
    background-color: var(--dark-background);
    color: var(--dark-foreground);
    border-bottom: 1px solid rgba(250, 250, 250, 0.250) !important;
}
#footer
{
    background-color:  var(--dark-background) !important;
    color:  var(--dark-foreground);
    border-top: 1px solid  var(--dark-border);
}

.border-bottom
{
    border-bottom: 1px solid var(--dark-border) !important;
}
.category, #toc
{
    border: 1px solid var(--dark-border) !important;
}
.rcTitle
{
    color:  var(--dark-foreground);
}
a
{
    color: #6a8caf;
}
a:hover
{
    color: #507395;
}
.blackln
{
    color: var(--dark-foreground);
}
.table
{
    color: inherit;
}
tbody
{
    border-color: rgba(250, 250, 250, 0.250);
}
.thTopMe
{
    background-color: var(--dark-nav) !important;
}
textarea, input[type=text], input[type=number]
{
    background-color: var(--dark-nav) !important;
    color: var(--dark-foreground) !important;
}
.captcha
{
    background-color: var(--dark-foreground);
    display: inline-block;
}
.card
{
    background-color: var(--dark-nav);
}
#floatingToolbox > button
{
    background-color: #244b75 !important;
    border-color: #244b75 !important
}
.ren-quote
{
    background-color: var(--dark-nav);
    border-bottom: 1px solid var(--dark-border) !important;
    border-right: 1px solid var(--dark-border) !important;
    border-top: 1px solid var(--dark-border) !important;   
}
.d2h-wrapper
{
    color: rgb(33, 37, 41);
}

